Refactor client domain, remove http client abstraction (merge with remote pkg), adaptations toward keystore sync
